function(cbench_module MODULE_NAME)
	string(TOUPPER ${MODULE_NAME} MODULE_NAME_UPPER)
	option(MODULE_${MODULE_NAME_UPPER} "Compile module" ON)
	if (MODULE_${MODULE_NAME_UPPER})
		add_library(${MODULE_NAME} SHARED ${ARGN})
		set_target_properties(${MODULE_NAME} PROPERTIES OUTPUT_NAME module)
		install(TARGETS ${MODULE_NAME} DESTINATION lib/cbenchsuite_modules/${MODULE_NAME})
	endif (MODULE_${MODULE_NAME_UPPER})
endfunction()

add_subdirectory(compression)
add_subdirectory(cooldown)
add_subdirectory(cpusched)
add_subdirectory(kernel)
add_subdirectory(linux_perf)
add_subdirectory(math)
add_subdirectory(sysctl)
